# matrix-displayer

./: Cargo.toml  cfg.toml  diagram.json  sdkconfig.defaults  wokwi.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: main.rs  max7219.rs  wifi.rs
