[package]
name = "matrix-displayer"
version = "0.1.0"
authors = ["Noteolvides <28985425+Noteolvides@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "matrix-displayer"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
embedded-hal = "0.2.7"
embedded-graphics = "0.8.1"
rand = "0.8.5"
anyhow = "1.0.89"
toml-cfg = "0.2.0"
embedded-svc = "0.28.0"
serde_json = "1.0"
chrono-tz = "0.10.0"
chrono = "0.4.38"
once_cell = "1.20.2"


[build-dependencies]
embuild = "0.32.0"
